--- a/src/styles.css
+++ b/src/styles.css
@@ -1559,15 +1559,37 @@ lib-text-field .input-field-wrapper .input-label {
 
 .header-container {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  flex-direction: flex;
+  justify-content: space-between;
   align-items: center;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   column-gap: 0.5rem;
   background: #282c34;
   color: #fff;
   width: 100vw;
-  height: 10vh;
+  height: auto;
+  box-sizing: border-box;
+  padding: 0.4rem 1rem;
+}
+.header-container .header-left {
+  display: flex;
+  flex-direction: row;
+  column-gap: 0.2rem;
+}
+.header-container .icon-holder {
+  width: 2rem;
+  height: 2rem;
+  padding: 0.2rem;
+  border-radius: 50%;
+  background-color: #7f4be0;
+  display: flex;
+  flex-direction: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.header-container .icon-holder .icon-hover:hover {
+  animation: fa-bounce 1s infinite;
 }
 .header-container .tabs {
   display: flex;
@@ -1605,10 +1627,43 @@ lib-text-field .input-field-wrapper .input-label {
   height: 80vh;
   max-height: 80vh;
   overflow-x: scroll;
+  position: relative;
 }
 .main-content-container > * {
   display: contents;
   width: 100%;
+}
+.main-content-container .side-bar-container {
+  max-width: 200px;
+  height: 100%;
+  position: absolute;
+  inset: 0;
+  background-color: rgba(196, 193, 193, 0.534);
+  backdrop-filter: blur(10px);
+  display: flex;
+  box-sizing: border-box;
+  flex-direction: column;
+  row-gap: 0.2rem;
+}
+.main-content-container .side-bar-container .menu-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: 0.4rem 0.4rem 0rem 0.4rem;
+  column-gap: 0.2rem;
+  padding: 0.4rem;
+  border-radius: 0.2rem;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  color: #000;
+  cursor: pointer;
+  transition: background-color 0.4s ease, color 0.4s ease;
+}
+.main-content-container .side-bar-container .menu-container:hover {
+  background-color: black;
+  color: #fff;
 }
 
 .footer-container {
