--- a/src/sass/components/card.scss
+++ b/src/sass/components/card.scss
@@ -5,6 +5,7 @@
  padding: 1rem;
  border-radius: 10px;
  box-sizing: border-box;
+ position: relative;
 
  .card-header {
   background: var(--clr);
@@ -15,6 +16,13 @@
    font-size: 1.2rem;
    margin: 0;
    color: white;
+  }
+
+  .closer{
+   position: absolute;
+   top: 0;
+   right: -0.7rem;
+   color: red;
   }
  }
 
