--- a/src/app/layout/login/signup/signup.component.html
+++ b/src/app/layout/login/signup/signup.component.html
@@ -7,14 +7,18 @@
    </div>
    <div class="card-body">
     <div class="d-flex flex-column row-gap-2">
-     <div class="col-xs-12 d-flex justify-space-between p-0 col-gap-2">
-      <lib-text-field [tf_mdl]="tf_firstname"></lib-text-field>
-      <lib-text-field [tf_mdl]="tf_lastname"></lib-text-field>
+     <div class="col-xs-12 d-flex justify-space-between p-0">
+      <div class="col-xs-6 pl-0">
+       <lib-text-field [tf_mdl]="tf_firstname"></lib-text-field>
+      </div>
+      <div class="col-xs-6 pr-0">
+       <lib-text-field [tf_mdl]="tf_lastname"></lib-text-field>
+      </div>
      </div>
      <lib-text-field [tf_mdl]="tf_mail"></lib-text-field>
      <lib-text-field [tf_mdl]="tf_password"></lib-text-field>
      <lib-text-field [tf_mdl]="tf_confirm_password"></lib-text-field>
-     <lib-button [btn_mdl]="btn_registor"></lib-button>
+     <lib-button [btn_mdl]="btn_registor" (eventHandler)="eventHandler($event)"></lib-button>
     </div>
    </div>
   </div>
