--- a/src/sass/pages/login.scss
+++ b/src/sass/pages/login.scss
@@ -4,5 +4,5 @@
  @include mixin.flexLayout(column, center, center, wrap);
  width: 100%;
  height: 100%;
- background-color: #cbcdd2;
+ // background-color: #cbcdd2;
 }
