sign up integration

--- a/src/app/layout/login/signup/signup.component.html
+++ b/src/app/layout/login/signup/signup.component.html
@@ -15,10 +15,11 @@
        <lib-text-field [tf_mdl]="tf_lastname"></lib-text-field>
       </div>
      </div>
-     <lib-text-field [tf_mdl]="tf_mail"></lib-text-field>
+     <lib-text-field [tf_mdl]="tf_email"></lib-text-field>
+     <lib-text-field [tf_mdl]="tf_mobile"></lib-text-field>
      <lib-text-field [tf_mdl]="tf_password"></lib-text-field>
      <lib-text-field [tf_mdl]="tf_confirm_password"></lib-text-field>
-     <lib-button [btn_mdl]="btn_registor" (eventHandler)="eventHandler($event)"></lib-button>
+     <lib-button [btn_mdl]="btn_register" (eventHandler)="eventHandler($event)"></lib-button>
     </div>
    </div>
   </div>
