--- a/src/app/custom-components/alert-toast/alert-toast.component.html
+++ b/src/app/custom-components/alert-toast/alert-toast.component.html
@@ -1,5 +1,5 @@
 @if (toast_mdl!.isShow) {
-<div class="outer-toast-overlay {{toast_mdl!.position}}">
+<div class="outer-toast-overlay {{toast_mdl!.position}}" @fade>
  <div class="toast-alert-container {{toast_mdl!.type}}">
   @if (toast_mdl!.title) {
   <div class="toast-header">
