--- a/src/styles.css
+++ b/src/styles.css
@@ -1635,7 +1635,7 @@ lib-text-field .input-field-wrapper .input-label {
   width: 100vw;
   max-height: 90vh;
   overflow-x: scroll;
-  background: #e9e9e9;
+  background: #fadba2;
 }
 .main-content-container .side-bar-container {
   max-width: 200px;
