--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -7,11 +7,11 @@
    <i class="fa-solid fa-bars fa-lg icon-hover"></i>
    }
   </div>
-  <div class="icon-holder">
+  <!-- <div class="icon-holder">
    <i class="fa-solid fa-frog fa-lg icon-hover"></i>
-  </div>
-  <div>
-   <h2 class="fs6">#GamePad</h2>
+  </div> -->
+  <div class="ml-4">
+   <h2 class="fs6">{{headerName}}</h2>
   </div>
  </div>
  <div class="tabs">
