--- a/src/app/layout/login/signup/signup.component.html
+++ b/src/app/layout/login/signup/signup.component.html
@@ -3,7 +3,7 @@
   <div class="card default" @fade>
    <div class="card-header pb-0">
     <h2 class="text-black text-center">Sign Up</h2>
-    <i class="fa-solid fa-circle-xmark fa-xl closer" (click)="toLogin()"></i>
+    <i class="fa-solid fa-circle-xmark fa-xl closer c-pointer" (click)="toLogin()"></i>
    </div>
    <div class="card-body">
     <div class="d-flex flex-column row-gap-2">
