--- a/src/sass/pages/layout.scss
+++ b/src/sass/pages/layout.scss
@@ -64,7 +64,7 @@
  max-height: 90vh;
  overflow-x: scroll;
  // position: relative;
- background: #fadba2; // #e9e9e9;
+ background: #e9e9e9; //#fadba2;
 
  .side-bar-container {
   max-width: 200px;
