--- a/src/app/custom-components/image-slider/image-slider.component.scss
+++ b/src/app/custom-components/image-slider/image-slider.component.scss
@@ -8,7 +8,7 @@
 
  .image-slider-wrapper {
   width: 100%;
-  height: 300px; // You can make this dynamic via @Input
+  height: 300px;
   display: flex;
   align-items: center;
   justify-content: center;
