--- a/src/app/layout/components/home/home.component.html
+++ b/src/app/layout/components/home/home.component.html
@@ -1,1 +1,3 @@
-<lib-image-slider [img_slider_mdl]="announcements_mdl" />
+<div class="col-xs-12">
+ <lib-image-slider [img_slider_mdl]="announcements_mdl" />
+</div>
