--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -22,7 +22,7 @@
  </div>
  <div>
   @if(isLogin){
-  <div class="icon-holder">
+  <div class="icon-holder" (click)="navigateToRoute({link:'profile'})">
 
   </div>
   }@else {
