--- a/src/app/layout/login/login.component.html
+++ b/src/app/layout/login/login.component.html
@@ -11,7 +11,7 @@
      <lib-button [btn_mdl]="btn_login" (eventHandler)="eventHandler($event)"></lib-button>
      <div class="col-xs-12 d-flex justify-space-between p-0">
       <span class="c-pointer">Forgot Password?</span>
-      <span class="c-pointer" (click)="toRegistor()">Create Account</span>
+      <span class="c-pointer" (click)="navigateToSignUp()">Create Account</span>
      </div>
      <lib-button [btn_mdl]="btn_login_otp"></lib-button>
     </div>
