--- a/src/sass/helpers/grid.scss
+++ b/src/sass/helpers/grid.scss
@@ -15,9 +15,10 @@ $breakpoints: (
 .container {
  display: flex;
  flex-wrap: wrap;
- margin-left: math.div(-$gutter, 2);
- margin-right: math.div(-$gutter, 2);
- gap: $gutter;
+ width: 100%;
+ // margin-left: math.div(-$gutter, 2);
+ // margin-right: math.div(-$gutter, 2);
+ // gap: $gutter;
 }
 
 // Grid Columns Generator
