--- a/src/styles.css
+++ b/src/styles.css
@@ -1574,6 +1574,35 @@ lib-button button.btn-muted:hover {
   border-color: #212121;
 }
 
+.overlay {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999999;
+  background: rgba(0, 0, 0, 0.6);
+}
+.overlay .loader {
+  border: 10px solid #f5f5f5;
+  border-top: 10px solid #20243a;
+  border-radius: 50%;
+  width: 2rem;
+  height: 2rem;
+  margin: auto;
+  inset: 0;
+  position: fixed;
+  animation: spin 1s linear infinite;
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 lib-text-field .input-field-wrapper .input-label {
   color: #04070b;
   font-weight: 600;
