--- a/src/app/layout/components/profile/profile.component.html
+++ b/src/app/layout/components/profile/profile.component.html
@@ -8,7 +8,7 @@
     </div>
    </div>
    <div class="card-body">
-    <div class="container">
+    <div class="container row-gap-4">
      <div class="col-xs-12 col-xl-6">
       <div class="container flex-column justify-center align-items-center gap-2 h-100">
        <div class="profile-img">
@@ -32,7 +32,11 @@
          </div>
         </div>
         <div class="col-xs-12 col-xl-8">
+         @if (isEdit) {
+         <lib-text-field [tf_mdl]="item['field_key']"></lib-text-field>
+         }@else {
          <p class="ml-5 fs2 ">{{userData[item["key"]]||""}}</p>
+         }
         </div>
        </div>
        }
