--- a/src/styles.css
+++ b/src/styles.css
@@ -1574,6 +1574,11 @@ lib-button button.btn-muted:hover {
   border-color: #212121;
 }
 
+lib-dropdown label {
+  color: #04070b !important;
+  font-weight: 600;
+}
+
 .overlay {
   width: 100%;
   height: 100%;
