--- a/src/app/layout/components/masters/tabs/tabs.component.html
+++ b/src/app/layout/components/masters/tabs/tabs.component.html
@@ -1,27 +1,26 @@
 <div class="col-xs-12">
- <div class="card p-0">
-  <div class="card-header">
-   <h2>Tabs</h2>
-  </div>
-  <div class="card-body">
-   <div class="container row-gap-2">
-    <div class="col-xs-12">
-     <lib-dropdown [dd_model]="dd_cat"></lib-dropdown>
-    </div>
-    <div class="col-xs-12">
-     <lib-text-field [tf_mdl]="tf_tab_name"></lib-text-field>
-    </div>
-    <div class="col-xs-12">
-     <lib-text-field [tf_mdl]="tf_tab_icon"></lib-text-field>
-    </div>
-    <div class="col-xs-12">
-     <lib-text-field [tf_mdl]="tf_tab_link"></lib-text-field>
-    </div>
-    <div class="col-xs-12 btn-grp">
-     <lib-button [btn_mdl]="btn_save"></lib-button>
-     <lib-button [btn_mdl]="btn_clear"></lib-button>
-    </div>
+ <lib-card [card_mdl]="card_mdl">
+  <div class="container row-gap-2">
+   <div class="col-xs-12">
+    <lib-dropdown [dd_model]="dd_cat"></lib-dropdown>
+   </div>
+   <div class="col-xs-12">
+    <lib-text-field [tf_mdl]="tf_tab_name"></lib-text-field>
+   </div>
+   <div class="col-xs-12">
+    <lib-text-field [tf_mdl]="tf_tab_icon"></lib-text-field>
+   </div>
+   <div class="col-xs-12">
+    <lib-text-field [tf_mdl]="tf_tab_link"></lib-text-field>
+   </div>
+   <div class="col-xs-12 btn-grp">
+    <lib-button [btn_mdl]="btn_save" (eventHandler)="eventHandler($event)"></lib-button>
+    <lib-button [btn_mdl]="btn_clear" (eventHandler)="eventHandler($event)"></lib-button>
    </div>
   </div>
- </div>
+ </lib-card>
+</div>
+
+<div class="col-xs-12 mt-4">
+ <lib-table [tbl_mdl]="tbl_mdl" (eventHandlerEmiiter)="tblEventHandler($event)"></lib-table>
 </div>
