--- a/src/styles.css
+++ b/src/styles.css
@@ -1463,7 +1463,8 @@ lib-button button.btn-muted:hover {
   padding: 1rem;
   border-radius: 10px 10px 0 0;
 }
-.card .card-header h2 {
+.card .card-header h2,
+.card .card-header i {
   font-size: 1.2rem;
   margin: 0;
   color: white;
@@ -1487,7 +1488,8 @@ lib-button button.btn-muted:hover {
 .card.default .card-header {
   background: #fff;
 }
-.card.default .card-header h2 {
+.card.default .card-header h2,
+.card.default .card-header i {
   color: #000;
 }
 .card.default .card-body {
